# datacontract-guard

./: .env.example  .gitignore  Dockerfile  README.md  api_server.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/routes/: validations.py
app/services/: validation_service.py
contract_agent/: __init__.py  cli.py  evaluation.py
contract_agent/adapters/: __init__.py  mcp_adapter.py  mini_yaml.py  schema_reader.py
contract_agent/agents/: __init__.py  base.py  code_generator.py  contract_agent.py  document_retriever.py  llm_explanation_agent.py  orchestrator.py  quality_agent.py  report_agent.py  schema_agent.py
contract_agent/api/: __init__.py  http.py
contract_agent/core/: __init__.py  agent.py  contract.py  data_quality.py  explainer.py  models.py  reporting.py
contract_agent/enterprise/: __init__.py  costs.py  logging.py  runtime.py  security.py  settings.py  tracing.py
docs/: ARCHITECTURE.md  MCP_CONNECTORS.md  SCHEMA.md  data-quality-rules.md  iceberg-guidelines.md  naming-conventions.md  pii-policy.md
docs/guides/: AIRFLOW.md  API.md  CI_CD.md  CLI.md  CONTRACT_FORMAT.md  DATA_MODEL.md  EVALUATION.md  (+9 more)
examples/: api-evaluate-request.json  customers_bad.csv  customers_contract.yaml  evaluation_cases.json  sample-report.md  supplier_bad.csv  supplier_contract.yaml
tests/: _debug_local.py  demo_mcp_adapters.py  test_contract_agent.py  test_enterprise.py  test_fastapi_validation_service.py  test_mcp_adapters_pytest.py
ui/: .env.example  .gitignore  README.md  index.html  package.json  vite.config.js
(+25 files in other folders)
