[project]
name = "data-contract-agent"
version = "0.1.0"
description = "Starter agent for validating source schemas against YAML data contracts."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
parquet = ["pyarrow"]

[project.scripts]
data-contract-agent = "contract_agent.cli:main"
data-contract-eval = "contract_agent.evaluation:main"
data-contract-api = "contract_agent.api.http:main"
