[project]
name = "data-contract-agent"
version = "0.1.0"
description = "AI-assisted Data Quality and Data Contract guard for incoming data."
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "python-multipart",
  "uvicorn[standard]",
  "requests",
]

[project.optional-dependencies]
parquet = ["pyarrow"]
vector = ["chromadb", "sentence-transformers"]
dev = ["pytest", "pytest-cov", "pytest-asyncio"]

[project.scripts]
data-contract-agent = "contract_agent.cli:main"
data-contract-eval = "contract_agent.evaluation:main"
data-contract-api = "contract_agent.api.http:main"
